Lorenz3D/v0/gbees.h

#define DIM 3
/*==============================================================================
CLASS DEFINITIONS
==============================================================================*/
typedef struct TreeNode TreeNode;
typedef struct Cell { 
    double prob;
    double v[DIM];
    double u[DIM];
    double w[DIM];
    double ctu[DIM];
    int state[DIM];
    TreeNode* i_nodes[DIM];
    TreeNode* k_nodes[DIM];
    double dcu;
    double cfl_dt;
    int new_f;
    int ik_f;
    int del_f;
} Cell;
typedef struct Grid {
    double thresh;
    double dt;
    double center[DIM];
    double dx[DIM];
} Grid;
typedef struct Traj {
    double sigma;
    double b;
    double r;
} Traj;
typedef struct TreeNode {
    uint64_t key;
    Cell cell;
    struct TreeNode* left;
    struct TreeNode* right;
} TreeNode;
typedef struct BST{
    TreeNode* dead;
    TreeNode* root;
    int a_count;
    int tot_count;
    uint64_t max_key;
    double cfl_min_dt;
 } BST;
void initialize_vuw(TreeNode* r, BST* P, Grid* G, Traj T){
    if(r == NULL){ 
        return;
    }
    initialize_vuw(r->left, P, G, T);
    initialize_vuw(r->right, P, G, T);
    
    if(r->cell.new_f==0){
        double x[DIM];
        for(int i = 0; i < DIM; i++){
            x[i] = G->dx[i]*r->cell.state[i]+G->center[i];
        }

        double v[DIM] = {T.sigma*(x[1]-(x[0]+(G->dx[0]/2.0))), -(x[1]+(G->dx[1]/2.0))-x[0]*x[2], -T.b*(x[2]+(G->dx[2]/2.0))+x[0]*x[1]-T.b*T.r}; 
        for(int i = 0; i < DIM; i++){
            r->cell.v[i] = v[i];
            r->cell.u[i] = fmin(v[i], 0.0); 
            r->cell.w[i] = fmax(v[i], 0.0); 
        }
        r->cell.new_f = 1;

        double sum = 0;
        for(int q = 0; q < DIM; q++) {
            sum += fabs(r->cell.v[q]) / G->dx[q];
        }

        r->cell.cfl_dt = 1.0/sum;
    }
}
void update_prob(TreeNode* r, Grid* G){
    if (r == NULL){
        return;
    }

    update_prob(r->left, G);
    update_prob(r->right, G);

    r->cell.prob += r->cell.dcu;
    for(int q = 0; q < DIM; q++){
        r->cell.prob -= (G->dt/G->dx[q])*(r->cell.ctu[q]-r->cell.i_nodes[q]->cell.ctu[q]);
    }
}
void get_tree_info(BST* P, Grid* G){
    P->a_count = 0; 
    P->tot_count = 0; 
    P->max_key = 0;
    get_tree_info_recursive(P->root, P, G); 
}
void record_data(TreeNode* r, const char* FILE_NAME, Grid G, const double t){
    FILE* file = fopen(FILE_NAME, "w");
    fprintf(file, "%lf\n", t);
    write_file(file, r, G);
    fclose(file);
}
void grow_tree(BST* P, Grid G, Traj T){
    create_neighbors(P->root, P, G);
    initialize_vuw(P->root, P, &G, T);
    initialize_ik_nodes(P->root, P);
    P->root = balance(P->root);
}
void prune_tree(BST* P, Grid* G){
    mark_cells(P->root, P, G);
    delete_cells(P->root, P, G);
    normalize_tree(P);
    initialize_ik_nodes(P->root, P);
}